--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nprogress": "^0.2.0",
     "prettier": "^3.6.2",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "zustand": "^5.0.6"
   },
